# EBplus-MacOS

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README_CN.md
algo/: CMakeLists.txt
algo/analytics/: active_marker.h  event_to_video.h  isi_analyzer.h  particle_counter.h  sensor_self_test.h
algo/analytics/e2vid/: e2vid_inference.h
algo/common/: lif_integrator.h
algo/cv/: background_mask_filter.h  bandpass_filter.h  cluster_lif.h  hough_circle_tracker.h  hough_line_tracker.h  noise_filter.h  optical_gyro.h  orientation_cluster.h  orientation_filter.h  sparse_optical_flow.h  time_surface.h  trigger_synced_filter.h  xyt_visualizer.h
algo/tests/: CMakeLists.txt  raw_event_stream.h  test_phase8_10.cpp  test_raw_algos.cpp  test_raw_e2v.cpp
doc/: design.md  gui_diagnostic_report.md  gui_optimization.md
docs/: centuryarks_openeb_5_2_integration_plan.md  centuryarks_openeb_5_2_live_event_validation.md  centuryarks_openeb_5_2_overlay_build.md  centuryarks_openeb_5x_source_audit.md  hdf5_ecf_dependency_recovery.md  linux_baseline_inventory.md  local_workspace_policy.md  macos_milestone_3_validation.md  macos_milestone_4a_validation.md  macos_porting_plan.md  macos_raw_core_playback_validation.md  macos_raw_file_lifecycle_validation.md  macos_raw_transport_controls_validation.md  openeb_5_2_macos_build_audit.md  openeb_5_2_macos_build_command_draft.md  openeb_5_2_macos_build_validation.md  openeb_version_isolation.md  platform_parity_matrix.md
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
gui/algo_bridge/: algo_backend.cpp  algo_backend.h  algo_bridge.cpp  algo_bridge.h  filter_chain.cpp
gui/algo_bridge/backends/: analytics_backends.cpp  analytics_extra_backends.cpp  backend_common.h  backend_factory.cpp  backend_registry.h  cv_backends.cpp  cv_vector_backends.cpp  display_backends.cpp  filter_backends.cpp  openeb_filter_backends.cpp  openeb_frame_backends.cpp  openeb_preproc_backends.cpp  openeb_util_backends.cpp
gui/app/: camera_controller.cpp  file_converter.cpp  icon_provider.cpp  icon_provider.h  startup_environment.cpp  startup_environment.h  theme_controller.cpp  theme_controller.h
gui/config/: config_manager.cpp
gui/display/: display_strategy.cpp  display_strategy.h  event_display_widget.cpp  event_display_widget.h  frame_annotator.cpp  frame_annotator.h  space_time_display.cpp  space_time_display.h
gui/exporter/: export_dialog.cpp  exporter_controller.cpp
gui/panels/: abstract_panel.cpp  abstract_panel.h  algorithms_panel.cpp  algorithms_panel.h  biases_panel.cpp  biases_panel.h  devices_panel.cpp  devices_panel.h  display_panel.cpp  display_panel.h  esp_panel.cpp  esp_panel.h  file_tools_panel.cpp  file_tools_panel.h  information_panel.cpp  information_panel.h  preprocessing_panel.cpp  preprocessing_panel.h  roi_panel.cpp  roi_panel.h  settings_panel.cpp  settings_panel.h  statistics_panel.cpp  statistics_panel.h  trigger_panel.cpp  trigger_panel.h
gui/recorder/: playback_controller.cpp
gui/resources/: icons.qrc  theme.qrc
gui/resources/theme/: base.qss.in  tokens.h
gui/tests/: CMakeLists.txt  test_algo_bridge.cpp  test_camera_controller_lifecycle.cpp  test_config_manager.cpp  test_display_strategy.cpp  test_layout_manager.cpp  test_startup_environment.cpp  test_theme_tokens.cpp
gui/widgets/: activity_bar.cpp  activity_bar.h  algo_window.cpp  collapsible_section.cpp  collapsible_section.h  custom_title_bar.cpp  custom_title_bar.h  pixel_probe.cpp
openeb/hal/cpp/lib/: CMakeLists.txt
openeb/hal/cpp/samples/metavision_platform_info/: CMakeLists.txt
openeb/hal_psee_plugins/lib/: CMakeLists.txt
openeb/sdk/cmake/: MetavisionSDKModulesHelper.cmake
openeb/sdk/modules/stream/cpp/samples/metavision_file_info/: CMakeLists.txt
openeb/sdk/modules/stream/cpp/samples/metavision_file_to_hdf5/: CMakeLists.txt
scripts/: prepare_centuryarks_openeb_source.sh  run_centuryarks_live_event_smoke.sh
tools/centuryarks_live_event_smoke/: CMakeLists.txt  README.md  main.cpp
wiki/: Algorithms.md  Architecture.md  GUI-Guide.md  Getting-Started.md  Home.md
