# gui/ — Qt 6 GUI application for openEB.

# Library sources (everything except main.cpp). Built once as a static library
# so the unit tests in tests/ can link the same code without recompiling it.
set(GUI_LIB_SOURCES
    main_window.cpp
    app/camera_controller.cpp
    app/file_converter.cpp
    app/file_frame_generator.cpp
    app/frame_pipeline.cpp
    app/icon_provider.cpp
    app/statistics_controller.cpp
    app/theme_controller.cpp
    algo_bridge/algo_bridge.cpp
    algo_bridge/backends/cv_backends.cpp
    algo_bridge/backends/cv_vector_backends.cpp
    algo_bridge/backends/analytics_backends.cpp
    algo_bridge/backends/analytics_extra_backends.cpp
    algo_bridge/backends/display_backends.cpp
    algo_bridge/backends/filter_backends.cpp
    algo_bridge/backends/openeb_filter_backends.cpp
    algo_bridge/backends/openeb_frame_backends.cpp
    algo_bridge/backends/openeb_preproc_backends.cpp
    algo_bridge/backends/openeb_util_backends.cpp
    algo_bridge/backends/backend_factory.cpp
    algo_bridge/filter_chain.cpp
    config/config_manager.cpp
    display/event_display_widget.cpp
    display/display_strategy.cpp
    exporter/exporter_controller.cpp
    exporter/export_dialog.cpp
    panels/abstract_panel.cpp
    panels/algorithms_panel.cpp
    panels/biases_panel.cpp
    panels/devices_panel.cpp
    panels/display_panel.cpp
    panels/esp_panel.cpp
    panels/file_tools_panel.cpp
    panels/information_panel.cpp
    panels/preprocessing_panel.cpp
    panels/roi_panel.cpp
    panels/settings_panel.cpp
    panels/statistics_panel.cpp
    panels/trigger_panel.cpp
    recorder/playback_controller.cpp
    recorder/playback_controls.cpp
    recorder/recorder_controller.cpp
)

# Phase 9 — calibration wizard (built when sources are present).
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/calibration/calibration_wizard.cpp")
    list(APPEND GUI_LIB_SOURCES
        calibration/calibration_wizard.cpp
    )
endif()

# Phase 10 — layout manager.
list(APPEND GUI_LIB_SOURCES
    widgets/custom_title_bar.cpp
    widgets/activity_bar.cpp
    config/layout_manager.cpp
)

# Phase 11 — jAER-inspired display / widgets (design §1.6).
# Header-only utility multiline_text.h needs no source entry.
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/display/space_time_display.cpp")
    list(APPEND GUI_LIB_SOURCES
        widgets/target_labeler.cpp
        widgets/pixel_probe.cpp
        widgets/mouse_adaptor.cpp
        widgets/algo_window.cpp
        display/frame_annotator.cpp
        display/space_time_display.cpp
    )
endif()

# Static library shared by the application and the unit tests.
add_library(gui_core STATIC ${GUI_LIB_SOURCES})
target_include_directories(gui_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(gui_core PUBLIC
    Qt6::Widgets
    Qt6::OpenGL
    Qt6::OpenGLWidgets
    gui_algo
)

# Phase 2 public headers expose HAL facility types directly. Prefer the OpenEB
# 5.2 target name while retaining compatibility with alternate Linux exports.
if(TARGET Metavision::HAL)
    set(_gui_hal_target Metavision::HAL)
elseif(TARGET MetavisionSDK::hal)
    set(_gui_hal_target MetavisionSDK::hal)
else()
    message(FATAL_ERROR
        "The Metavision package does not export a supported HAL target "
        "(Metavision::HAL or MetavisionSDK::hal).")
endif()
target_link_libraries(gui_core PUBLIC ${_gui_hal_target})
unset(_gui_hal_target)

# Main executable — entry point only; all logic lives in gui_core.
add_executable(gui_for_openeb main.cpp)

# Qt resources — theme QSS template + Lucide-style SVG icons (design §3.1/§3.2).
# AUTORCC compiles these into the binary so the code can load ":/theme/..." and
# ":/icons/..." at runtime.
target_sources(gui_for_openeb PRIVATE
    resources/theme.qrc
    resources/icons.qrc
)

target_link_libraries(gui_for_openeb PRIVATE gui_core)

if(APPLE)
    set_target_properties(gui_for_openeb PROPERTIES
        INSTALL_RPATH "@executable_path/../lib")
elseif(UNIX AND NOT APPLE)
    # Preserve the existing bin/../lib install layout intent on the final
    # executable. The previous STATIC-library RPATH could not affect runtime.
    set_target_properties(gui_for_openeb PROPERTIES
        BUILD_RPATH_USE_ORIGIN TRUE
        INSTALL_RPATH [[$ORIGIN/../lib]])
endif()

install(TARGETS gui_for_openeb RUNTIME DESTINATION bin)

# --- Unit tests (design §3.11) ---------------------------------------------
option(GUI_BUILD_TESTS "Build GUI unit tests" ON)
if(BUILD_TESTING AND GUI_BUILD_TESTS)
    add_subdirectory(tests)
endif()
